--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -2,9 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: petclinic
+  namespace: default
 spec:
   selector:
     app: petclinic
   ports:
-    - port: 8080
+    - port: 80
       targetPort: 8080
+      protocol: TCP
