--- a/src/main/resources/application-us.properties
+++ b/src/main/resources/application-us.properties
@@ -1,12 +1,12 @@
-
-spring.datasource.url=jdbc:postgresql://${DB_HOST}:5432/${DB_NAME}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASSWORD}
-
-spring.datasource.hikari.read-only=true
-
-spring.sql.init.mode=never
+spring.datasource.url=jdbc:h2:mem:petclinicdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=none
+spring.sql.init.mode=always
+spring.sql.init.platform=h2
+spring.sql.init.schema-locations=classpath:db/h2/schema.sql
+spring.sql.init.data-locations=classpath:db/h2/data.sql
 
-spring.jpa.properties.hibernate.connection.provider_disables_autocommit=true
+spring.h2.console.enabled=true
