--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,8 @@
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:h2:mem:petclinic
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 
-spring.jpa.open-in-view=false
-spring.jpa.hibernate.ddl-auto=none
-
-spring.thymeleaf.mode=HTML
-management.endpoints.web.exposure.include=*
-logging.level.org.springframework=INFO
-
-spring.web.resources.cache.cachecontrol.max-age=12h
-spring.messages.basename=messages/messages
-
-spring.datasource.hikari.maximum-pool-size=5
-spring.datasource.hikari.minimum-idle=1
-spring.datasource.hikari.connection-timeout=3000
-spring.datasource.hikari.validation-timeout=3000
-
-spring.cloud.gcp.enabled=false
-spring.autoconfigure.exclude=\
-  org.springframework.cloud.gcp.autoconfigure.core.GcpContextAutoConfiguration,\
-  org.springframework.cloud.gcp.autoconfigure.sql.GcpCloudSqlAutoConfiguration
-
-spring.sql.init.mode=never
-
-spring.jpa.defer-datasource-initialization=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=create
