--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -117,6 +117,9 @@ jobs:
 
       - name: Apply MultiClusterIngress (config cluster)
         run: kubectl apply -f k8s/mci.yaml
+        
+      - name: Apply EU ServiceExport
+        run: kubectl apply -f k8s/serviceexport.yaml
 
       #################################
       # US Cluster Deployment
@@ -141,3 +144,5 @@ jobs:
 
       - name: Apply US HPA
         run: kubectl apply -f k8s/hpa-us.yaml
+      - name: Apply us ServiceExport
+        run: kubectl apply -f k8s/serviceexport.yaml
